--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,8 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.2.12</version>
         </dependency>
-    </dependencies><repositories>
+    </dependencies>
+    <repositories>
     <repository>
         <id>spring-snapshots</id>
         <name>Spring Snapshots</name>
