--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,11 +17,11 @@ ms.db.maxActive=500
 # Redis数据库索引（默认为0）
 spring.redis.database=0
 # Redis服务器地址
-spring.redis.host=192.168.1.106
+spring.redis.host=192.168.1.105
 # Redis服务器连接端口
 spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
-spring.redis.password=xzg
+spring.redis.password=
 # 连接池最大连接数（使用负值表示没有限制）
 spring.redis.pool.max-active=8
 # 连接池最大阻塞等待时间（使用负值表示没有限制）
