--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,14 @@
 
 mongo.username = mongo
 mongo.password = mongo
-
-ms.db.driverClassName=com.mysql.jdbc.Driver
-ms.db.url=jdbc:mysql://localhost:3306/cache?prepStmtCacheSize=517&cachePrepStmts=true&autoReconnect=true&useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true
-ms.db.username=xzg
-ms.db.password=xzg
-ms.db.maxActive=500
+#ms.db.driverClassName=com.mysql.jdbc.Driver
+#ms.db.url=jdbc:mysql://localhost:3306/cache?prepStmtCacheSize=517&cachePrepStmts=true&autoReconnect=true&useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true
+#ms.db.username=xzg
+#ms.db.password=xzg
+#ms.db.maxActive=500
+#-------------------ehcache----------------------
+spring.cache.ehcache.config=classpath:config/ehcache.xml
+#-------------------redis------------------------
 ## redis 配置
 # Redis数据库索引（默认为0）
 spring.redis.database=0
@@ -33,3 +35,11 @@ spring.redis.pool.min-idle=0
 # 连接超时时间（毫秒）
 spring.redis.timeout=0
 
+#spring.cache.ehcache.config=classpath:config/xxx-config.xml
+
+## LOG4J配置
+log4j.rootCategory=DEBUG,stdout
+## 控制台输出
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %5p %c{1}:%L - %m%n
