--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,16 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.2.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.8.0</version>
+        </dependency>
     </dependencies>
     <repositories>
     <repository>
