--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,12 @@
             <artifactId>ehcache</artifactId>
             <version>2.10.4</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/com.caucho/hessian -->
+        <dependency>
+            <groupId>com.caucho</groupId>
+            <artifactId>hessian</artifactId>
+            <version>4.0.51</version>
+        </dependency>
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
