--- a/Netty_RPC/pom.xml
+++ b/Netty_RPC/pom.xml
@@ -5,33 +5,43 @@
   <artifactId>nett.rpc</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <name>cc Maven Webapp</name>
+  <name>Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  <dependencies>
+ <!-- 指明编译源代码时使用的字符编码，maven编译的时候默认使用的GBK编码， 通过project.build.sourceEncoding属性设置字符编码，告诉maven这个项目使用UTF-8来编译 -->  
+ <properties>  
+     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
+ </properties>
+ <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <encoding>utf8</encoding> 
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+<dependencies>
    <!-- JUnit -->
-   <dependency>
-    <groupId>junit</groupId>
-    <artifactId>junit</artifactId>
-    <version>4.12</version>
-    <scope>test</scope>
-</dependency>
+   	<dependency>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>4.12</version>
+	    <scope>test</scope>
+	</dependency>
     <!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
 <dependency>
     <groupId>joda-time</groupId>
     <artifactId>joda-time</artifactId>
     <version>2.9.7</version>
 </dependency>
-<!-- <dependency>
-    <groupId>io.netty</groupId>
-    <artifactId>netty-all</artifactId>
-    <version>4.0.14.Final</version>
-</dependency> -->
 <!-- https://mvnrepository.com/artifact/log4j/log4j -->
-<dependency>
-    <groupId>log4j</groupId>
-    <artifactId>log4j</artifactId>
-    <version>1.2.17</version>
-</dependency>
+		<dependency>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>1.2.17</version>
+		</dependency>
 
         <!-- SLF4J -->
         <dependency>
@@ -110,8 +120,4 @@
 </dependency>
 
   </dependencies>
- 
-<!--  <build>
-    <finalName>cc</finalName>
-  </build>-->
 </project>
