--- a/otrs/common/pom.xml
+++ b/otrs/common/pom.xml
@@ -10,9 +10,13 @@
     <packaging>jar</packaging>
     <name>online-table-reservation:common</name>
     <dependencies>
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-hystrix</artifactId>
+        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
