--- a/otrs/security-service/pom.xml
+++ b/otrs/security-service/pom.xml
@@ -17,6 +17,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-oauth2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>5.0.6.RELEASE</version>
+        </dependency>
     </dependencies>
     <name>online-table-reservation:security-service</name>
     <properties>
