--- a/otrs/security-service/src/main/resources/application.yml
+++ b/otrs/security-service/src/main/resources/application.yml
@@ -9,7 +9,8 @@ server:
         key-store-password: password
         key-password: password
 # contextPath表示上下文；路径
-    contextPath: /auth
+#    contextPath: /auth
+
 # 暂时使用硬编码
 security:
     user:
