--- a/otrs/security-service/pom.xml
+++ b/otrs/security-service/pom.xml
@@ -10,6 +10,11 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
+            <groupId>com.xzg</groupId>
+            <artifactId>online-table-reservation-common</artifactId>
+            <version>v1</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-security</artifactId>
         </dependency>
