--- a/otrs/security-service/src/main/resources/application.yml
+++ b/otrs/security-service/src/main/resources/application.yml
@@ -15,6 +15,7 @@ server:
 security:
     user:
         password: password
+    ignored: /css/**,/js/**,/favicon.ico,/webjars/**
 
 logging:
     level:
