--- a/otrs/security-service/src/main/resources/application.yml
+++ b/otrs/security-service/src/main/resources/application.yml
@@ -14,9 +14,12 @@ server:
 # 暂时使用硬编码
 security:
     user:
+        nam: client
         password: password
     ignored: /css/**,/js/**,/favicon.ico,/webjars/**
-
+#    oauth2:
+#        resource:
+#            filter-order: 3
 logging:
     level:
         org.springframework.security: DEBUG
