--- a/otrs/zuul-server/src/main/resources/application.yml
+++ b/otrs/zuul-server/src/main/resources/application.yml
@@ -74,7 +74,6 @@ eureka:
         fetchRegistry: true
         healthcheck:
             enabled: true
-
 logging:
     level:
       ROOT: INFO
@@ -83,3 +82,8 @@ logging:
 app:
   ConnectTimeout: 100
   ReadTimeout: 3000
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: xzg
+    password: xzg
