--- a/otrs/security-service/pom.xml
+++ b/otrs/security-service/pom.xml
@@ -14,6 +14,12 @@
             <artifactId>online-table-reservation-common</artifactId>
             <version>v1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-security</artifactId>
