--- a/otrs/api-service/pom.xml
+++ b/otrs/api-service/pom.xml
@@ -17,7 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>com.xzg</groupId>
-            <artifactId>online-table-reservation-common</artifactId>
+            <artifactId>common</artifactId>
             <version>v1</version>
         </dependency>
         <!--<dependency>
