--- a/otrs/zuul-server/src/main/resources/application.yml
+++ b/otrs/zuul-server/src/main/resources/application.yml
@@ -20,6 +20,12 @@ zuul:
             path: /api/**
             serviceId: api-service
             stripPrefix: true
+        resource:
+          path: /api/**
+          url: http://localhost:9000
+        user:
+            path: /user/**
+            url: https://localhost:9001/user
 
 server:
     ssl:
@@ -32,13 +38,18 @@ server:
 
 security:
   oauth2:
+    clientId: client
+    clientSecret: password
+    userAuthorizationUri: https://localhost:9001/oauth/authorize
+    grant-type: password
+    scope: apiAccess
+    access-token-uri: https://localhost:9001/oauth/token
     resource:
       userInfoUri: https://localhost:9001/user
-      refer-token-infop: false
-    client:
-      access-token-uri: https://localhost:9001/oauth/token
-      user-authorization-uri: https://localhost:9001/oauth/authorize
-      client-id: client
+    authorization:
+      checkTokenAccess: http://localhost:9001/oauth/check_token
+  basic:
+    enabled: false
 
 hystrix:
   threadpool:
